--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
   "require": {
     "php": "^8.4",
     "ext-pdo_mysql": "*",
-    "monkeyscloud/monkeyslegion-core": "^1.0@dev",
-    "monkeyscloud/monkeyslegion-di": "dev-main"
+    "monkeyscloud/monkeyslegion-core": "^1.0",
+    "monkeyscloud/monkeyslegion-di": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -18,7 +18,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-main": "1.0-dev"
+      "dev-main": "1.0.x-dev"
     }
   }
 }
