feat(cache): file system adapter & in-memory adapter along with proper test cases

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "php": "^8.4",
     "ext-pdo_mysql": "*",
     "monkeyscloud/monkeyslegion-core": "^1.0",
-    "monkeyscloud/monkeyslegion-di": "^1.0"
+    "monkeyscloud/monkeyslegion-di": "^1.0",
+    "psr/cache": "^3.0"
   },
   "autoload": {
     "psr-4": {
