--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "require": {
     "php": "^8.4",
     "ext-pdo_mysql": "*",
-    "monkeyscloud/monkeyslegion-cache": "^1.0.x-dev"
+    "monkeyscloud/monkeyslegion-cache": "^1.0"
   },
   "autoload": {
     "psr-4": {
